@@ -4,6 +4,9 @@ New in v1.1.4 (????/??/??)
 Quoting should be enabled only as needed between case-sensitive and
 non-case-sensitive systems (thanks for Andrew Ferguson for report).
 
+Files with ACLs will not be unnecessarily marked as changed (bug
+report by Carsten Lorenz).
+
 
 New in v1.1.3 (2005/11/25)
 --------------------------
